deploy/kubernetes/turtl-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: turtl-api
  labels:
    app: turtl
spec:
  ports:
  - port: 8181
  selector:
    app: turtl
    tier: api
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: turtl-api
  labels:
    app: turtl
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: turtl
        tier: api
    spec:
      containers:
      - image: stouffcapital/turtl-server:0.1.3
        name: turtl-api
        ports:
        - containerPort: 8181
          name: turtl-api
        volumeMounts:
        - name: turtl-uploads-persistent-storage
          mountPath: /var/www/turtl/server/public/uploads
        - name: turtl-config
          mountPath: /app/config/config.yaml
          subPath: config.yaml
      volumes:
      - name: turtl-uploads-persistent-storage
        persistentVolumeClaim:
          claimName: turtl-uploads-pv-claim
      - name: turtl-config
        configMap:
          name: turtl-cm
