deploy/kubernetes/turtl-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: turtl-postgres
  labels:
    app: turtl
spec:
  ports:
    - port: 5432
  selector:
    app: turtl
    tier: postgres
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: turtl-postgres
  labels:
    app: turtl
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: turtl
        tier: postgres
    spec:
      containers:
      - image: postgres:9.6
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: turtl-postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: turtl-postgres-persistent-storage
        persistentVolumeClaim:
          claimName: turtl-postgres-pv-claim
