deploy/kubernetes/turtl-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-turtl
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - notes.stouffcapital.com
    secretName: notes-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: notes.stouffcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: turtl-api
          servicePort: 8181
